--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         <br/>
 
         <label for="E-mail">Seu E-mail</label>
-        <input type="text" id="E-mail">    
+        <input type="email" id="E-mail">    
         <br/>
 
         <label for="password">Senha</label>
-        <input type="text" id="password">
+        <input type="Senha" id="password">
         <br/>
 
         <button type="submit">Cadastrar</button>
