--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <h1>Formulario</h1>
+        <h1>Formulario De Cadastro</h1>
     </header>
     <br/>
     <form >
@@ -20,7 +20,7 @@
         <br/>
 
         <label for="password">Senha</label>
-        <input type="Senha" id="password">
+        <input type="password" id="password">
         <br/>
 
         <button type="submit">Cadastrar</button>
